Bug #8537
closedRDoc cannot parse ext/objspace
Added by zzak (zzak _) over 13 years ago. Updated over 13 years ago.
Description
Maybe bug in rdoc or objspace extension
Updated by Eregon (Benoit Daloze) over 13 years ago
Actions
#1
[ruby-core:55527]
I made a couple changes and it now appears in ri ObjectSpace,
but only when I generate again the documentation (for example, by touching ext/objspace/objspace.c),
not when make clean && make install (only the non-extension description is shown).
It definitely sounds as a RDoc bug therefore.
I also made rdoc know about the extension methods.
Updated by zzak (zzak _) over 13 years ago
Actions
#2
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r41382.
Zachary, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- ext/objspace/object_tracing.c: Teach rdoc object_tracing.c [Bug #8537]
Updated by Eregon (Benoit Daloze) over 13 years ago
Actions
#3
[ruby-core:55542]
- Status changed from Closed to Open
- % Done changed from 100 to 0
@zzak (zzak _): The overview of objspace ext comes before the general doc for ObjectSpace,
is that avoidable?
Also, with r41380, I cannot know anymore using for instance ri ObjectSpace.memsize_of that I need to require 'objspace' to use it. Is it clear on the html page generated (from which lib/ext do methods come) ?
Updated by zzak (zzak _) over 13 years ago
Actions
#4
Eregon (Benoit Daloze) wrote:
@zzak (zzak _): The overview of objspace ext comes before the general doc for ObjectSpace,
is that avoidable?
What do you mean?
Also, with r41380, I cannot know anymore using for instance
ri ObjectSpace.memsize_ofthat I need to require 'objspace' to use it. Is it clear on the html page generated (from which lib/ext do methods come) ?
I think we should add doc to say 'extension method', the whole require bit is a bit redundant.
Updated by Eregon (Benoit Daloze) over 13 years ago
Actions
#5
[ruby-core:55554]
zzak (Zachary Scott) wrote:
Eregon (Benoit Daloze) wrote:
@zzak (zzak _): The overview of objspace ext comes before the general doc for ObjectSpace,
is that avoidable?What do you mean?
See https://gist.github.com/eregon/bf86d335fdc9a36d96c0
Also, with r41380, I cannot know anymore using for instance
ri ObjectSpace.memsize_ofthat I need to require 'objspace' to use it. Is it clear on the html page generated (from which lib/ext do methods come) ?I think we should add doc to say 'extension method', the whole require bit is a bit redundant.
It is redundant at source level but not so much when browsing documentation.
Unless there is a clear way to link to which method is introduced by which extension,
I think it is needed to "link manually" and not sure something like
"this methods belongs to the objspace library" is better than "You need to require 'objspace' to use this method."
Updated by zzak (zzak _) over 13 years ago
Actions
#6
[ruby-core:55556]
- Status changed from Open to Closed
Hi