* ext/objspace/object_tracing.c: Teach rdoc object_tracing.c [Bug #8537]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@41382 b2dd03c8-39d4-4d8f-98ff-823fe69b080e